# sdl2_reference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build  check  premake  premake5.lua
01_texture_button/: CMakeLists.txt  premake5.lua
01_texture_button/src/: main.cpp
02_geometry/: CMakeLists.txt  premake5.lua
02_geometry/src/: main.cpp  pch.h
lynton/: premake5.lua
texture_button/: premake5.lua
texture_button/src/: main.cpp
utils/: premake5.lua
utils/src/: math_def.h  random.h  transformation.cpp  transformation.h  trie.cpp  trie.h  utils.h
